--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsc-watch --onSuccess \"node dist/index.js\"",
     "doc": "typedoc",
     "test": "mocha",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "nyc": "^15.1.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^5.0.3",
-    "typedoc": "^0.22.15"
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.3"
   }
 }
